fix body horizonal scrollbar and hero image for desktop

--- a/easybank-landing-page/src/components/Layout/Footer/footer.scss
+++ b/easybank-landing-page/src/components/Layout/Footer/footer.scss
@@ -88,12 +88,6 @@ span.socials {
     a {
         margin: 0 .5em;
     }
-
-    a:hover img {
-        filter: invert(1);
-        @extend %transitions;
-    
-    }
 }
 
 span.logo {
