--- a/easybank-landing-page/src/components/style/reset.scss
+++ b/easybank-landing-page/src/components/style/reset.scss
@@ -15,7 +15,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 body {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     font-family: $public-sans;
     font-weight: 300;
