--- a/easybank-landing-page/src/components/style/variables.scss
+++ b/easybank-landing-page/src/components/style/variables.scss
@@ -40,4 +40,5 @@ $public-sans: 'Public Sans', sans-serif;
 // MEDIA QUERIES
 ////////////////////////
 $breakpoint-desktop: 900px;
+$breakpoint-tablet: 1620px;
 $breakpoint-mobile: 400px;
